# JobSpy-main

./: README.md  pyproject.toml
bench_apply_engine/: .gitignore  COMPONENT_PLAN.md  README.md  bench_resources.sample.json  main.py  run_api.py  run_scheduler.py  sample_jobs.csv
bench_apply_engine/app/: __init__.py  __main__.py  activity_log.py  adzuna_adapter.py  api.py  contracts.py  matching.py  models.py  pipeline.py  profile_intelligence.py  resume_optimizer.py  scheduler.py
bench_apply_engine/app/extension_adapters/: indeed.json  linkedin.json
jobspy/: __init__.py  cli.py  e2e.py  model.py
jobspy/builtin/: __init__.py
jobspy/careerbuilder/: __init__.py
jobspy/computerjobs/: __init__.py
jobspy/cybercoders/: __init__.py
jobspy/dice/: __init__.py
jobspy/hired/: __init__.py
jobspy/hiringcafe/: __init__.py
jobspy/monster/: __init__.py
jobspy/simplyhired/: __init__.py
jobspy/techfetch/: __init__.py
jobspy/usajobs/: __init__.py
jobspy/wellfound/: __init__.py
tests/: test_e2e_filters.py
