[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-jobspy"
version = "1.1.82"
description = "Customized JobSpy fork for USA IT job aggregation and enriched JD extraction"
authors = ["Ramu Akula <sitarama@clsutersunited.com>", "Cullen Watson <cullen@cullenwatson.com>", "Zachary Hampton <zachary@zacharysproducts.com>"]
homepage = "https://github.com/clustersadmin/JobSpy-main"
repository = "https://github.com/clustersadmin/JobSpy-main"
readme = "README.md"
keywords = [ "jobs-scraper", "usa-it-jobs", "linkedin", "indeed", "glassdoor", "ziprecruiter", "dice", "builtin", "naukri"]
[[tool.poetry.packages]]
include = "jobspy"

[tool.black]
line-length = 88

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.0"
numpy = ">=1.26.0"
pydantic = "^2.3.0"
tls-client = "^1.0.1"
markdownify = "^1.1.0"
regex = "^2024.4.28"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "*"
pre-commit = "*"

[tool.poetry.scripts]
jobspy-e2e = "jobspy.cli:main"
